Move gRPC mode to plugin